# models.py
@@ -1,14 +1,17 @@
 from pydantic import BaseModel
 from typing import List, Dict
 
+
 class SeatType(BaseModel):
     available: int
     price: float
+
 
 class Seats(BaseModel):
     total: int
     available: int
     types: Dict[str, SeatType]
+
 
 class Show(BaseModel):
     date: str
@@ -16,11 +19,14 @@ class Show(BaseModel):
     hall: str
     seats: Seats
 
+
 class Movie(BaseModel):
+    id: int
     title: str
     language: str
     cinema: str
     shows: List[Show]
 
-class MoviesResponse(BaseModel):
+
+class BookingsResponse(BaseModel):
     movies: List[Movie]
